# mc_naoqi_dcm

./: CMakeLists.txt
include/: RobotModule.h  mc_naoqi_dcm.h  mc_naoqi_dcm_reader.h
src/: CMakeLists.txt  PepperRobotModule.cpp  main.cpp  mc_naoqi_dcm.cpp  mc_naoqi_dcm_reader.cpp
utils/: check_callback.py  check_dcm.cpp  check_dcm.py  check_safety_reflexes.py  deactivate_safety_reflexes.py  residual_plotter.py
